--- a/less/about-page.less
+++ b/less/about-page.less
@@ -21,6 +21,7 @@ justify-content: center;
  // flex-wrap: wrap;
   // flex-direction: row;
   padding: 3% 4% 2%;
+   margin-bottom: 200px;
 
 
   @media @phone{
@@ -55,7 +56,7 @@ text-align: center;
           // text-align: center;
     }
 }
-
-footer{
-      margin-top: 250px
-}
+//
+// footer{
+//       margin-top: 250px
+// }
